2011-11-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, include/pqxx/util.hxx, src/binarystring.cxx,
 src/util.cxx:
 - Always free binarystring buffer using std::free().
 - Fixes #227: on Windoes, must free() from same library that malloc()ed.
 - Thanks Sam Kapilivsky for diagnosing the error and working out the fix.
2011-11-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection.cxx:
 - Work around compiler warning for removed PGRES_POLLING_ACTIVE in switch.
 src/cursor.cxx:
 - Hopefully the right fix for that Visual Studio warning this time.
 - Fixes #239.  Thanks Sam Kapilivsky.
2011-11-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualStudio2005/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h:
 - Removed PQXX_HAVE_STRERROR_R; Visual Studio has strerror_s.
 - Fixes #240.  Thanks Sam Kapilivsky.
2011-11-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection.cxx:
 - Removed support for obsolete PGRES_POLLING_ACTIVE.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualStudio2005,
 config/sample-headers/compiler/VisualStudio2008,
 config/sample-headers/compiler/VisualStudio2010:
 - New sample headers by Sam Kapilivksy.
 include/pqxx/util.hxx, test/unit/test_thread_safety_model.cxx:
 - Renamed have_strerror_r to have_safe_strerror; it's not just strerror_r.
 src/util.cxx:
 - Support Windows strerror_s as other safe alternative to strerror.
 - Fixes #235.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
 - Made PQAlloc contain a std::shared_ptr, not derive from it.
 - As per patch in #236; fixes Visual Studio build problems.
 - Thanks Sam Kapilivsky.
2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx:
 - New trick for accepting (and requiring) semicolon after PQXX_CHECK_THROWS.